Fixed aligning of the Dropdown Close button on small screens
Fixes #4954

--- a/bigbluebutton-html5/imports/ui/components/dropdown/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/dropdown/styles.scss
@@ -82,6 +82,7 @@ $dropdown-caret-height: 8px;
 
   @include mq($small-only) {
     display: block;
+    bottom: 0.8rem;
   }
 }
 
